[package]
name = "sedimentology-archiver"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { path = "../../../../qtrade-replayer/whirlpool-tx-replayer/replay-engine" }

mysql = { workspace = true }
clap = { workspace = true }

ctrlc = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
flate2 = { workspace = true }
csv = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }