[package]
name = "sedimentology-replayer"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replay-engine = { path = "../../../whirlpool-tx-replayer/replay-engine" }

mysql = { workspace = true }
clap = { workspace = true }

ctrlc = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }